fix: optimize RAM for Render free tier

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,8 @@
-flask
-flask-cors
-sentence-transformers
-torch
-vaderSentiment
-joblib
-numpy
+Flask==2.3.3
+Flask-CORS==4.0.0
+sentence-transformers==2.2.2
+scikit-learn==1.3.0
+joblib==1.3.2
+vaderSentiment==3.3.2
+numpy==1.24.3
+torch==2.0.1+cpu
