--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,8 @@ Flask==2.3.3
 Flask-CORS==4.0.0
 sentence-transformers==2.2.2
 scikit-learn==1.2.2
-joblib==1.3.2
+joblib==1.2.1
 vaderSentiment==3.3.2
-numpy==1.21.6
+numpy==1.22.4
 torch==2.0.1+cpu
+transformers==4.20.1
