--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,10 @@
-Flask==2.3.3
-Flask-CORS==4.0.0
+Flask==3.0.0
+Flask-Cors==4.0.0
 sentence-transformers==2.2.2
-scikit-learn==1.2.2
-joblib==1.2.1
+scikit-learn==1.3.2
+joblib==1.3.2
 vaderSentiment==3.3.2
-numpy==1.22.4
-torch==2.0.1+cpu
-transformers==4.20.1
+numpy==1.24.4
+torch==2.2.0
+transformers==4.36.2
+gunicorn==21.2.0
